slurm_subset_13438086.out
Lmod has detected the following error: The following module(s) are unknown:
"python/gnu/3.6.5"

   Please check the spelling or version number. Also try "module spider ..."

Lmod has detected the following error: The following module(s) are unknown:
"spark/2.4.0"

   Please check the spelling or version number. Also try "module spider ..."

  File "./yelp_restaurant_subset.py", line 17
    restaurant_subset = spark.sql('SELECT * FROM business WHERE (category like '%Restaurants%' or category like '%Restaurant%' or category like '%Cafes%' or category like '%Bakeries%' or category like '%Bars%' or category like '%Desserts%' or category like '%Coffee & Tea%' or category like '%Juice Bars & Smoothies%' or category like '%Food Trucks%' or category like '%Caterers%' or category like '%Coffee Roasteries%' or category like '%Delicatessen%' or category like '%Deli%')')
                                                                                                                                                                                                                                                                                                           ^
SyntaxError: invalid syntax
